fix search recipes and ingredient input